# CrossCompilationX

./: README.md  helper_Buildroot-RaspberryPi3.md  helper_OpenWrt-RaspberryPi3.md  helper_Yocto-HomeAssistant.md  helper_Yocto-NXP-8MMINILPD4-EVKB.md  helper_Yocto-NXP-8MMINILPD4‑EVKB.md  helper_Yocto-RAUC.md  helper_Yocto-RaspberryPi3.md  helper_Yocto-cookerX.md  helper_Yocto-meta-HomeAssistant.md  helper_Yocto-meta-Matter.md  helper_Yocto-meta-NXP-Matter.md  helper_Yocto-meta-RAUC.md  helper_Yocto.md  helper_clang.md  helper_crosstool-ng.md  helper_crosstoolX.md  helper_generate_toolchain.md
Yocto/cookerX/: .cookerconfig  Makefile  cooker_123.sh
Yocto/cookerX/confs/: imx8mm-scarthgap-core.conf  imx8mm-scarthgap-emmc.conf  imx8mm-scarthgap-full.conf  imx8mm-scarthgap-home.conf  imx8mm-scarthgap-home2023.12.0.conf  imx8mm-scarthgap-rauc-home2023.12.0.conf  imx8mm-scarthgap-rauc.conf  imx8mm-walnascar-all.conf  imx8mm-walnascar-core.conf  pi3-sample.conf  (+7 more)
Yocto/imx-manifest/: imx-6.12.20-2.0.0.xml  imx-6.12.3-1.0.0.xml  imx-6.6.52-2.2.0.xml
crosstool-ng/PI4/crosstool-ng/share/crosstool-ng/config/: configure.in
crosstool-ng/PI4/crosstool-ng/share/crosstool-ng/config/versions/: autoconf.in  avr-libc.in  bison.in  gcc.in  glibc.in  gmp.in  gnuprumcu.in  libelf.in  libiconv.in  linux.in  ltrace.in  m4.in  make.in  mingw-w64.in  moxiebox.in  mpfr.in  ncurses.in  strace.in  uClibc-ng.in  zlib.in
crosstool-ng/crosstoolX/: Makefile
crosstoolX/: Makefile
crosstoolX/confs/: i486-linux-2.6.24.sh  i486-linux-2.6.38.8.sh  i486-linux-4.14.14.sh  i486-linux-gnu-2.6.38.8.sh
(+408 files in other folders)
